--- a/themes/default/resources/css/default.css
+++ b/themes/default/resources/css/default.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font: 0.9rem sans-serif;
   margin: 0;
 }
 
@@ -225,4 +225,8 @@ textarea {
 
 select {
   font: 0.9rem sans-serif;
+}
+
+p.error {
+  color: #d9534f;
 }
