--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -20,7 +20,11 @@ body > header {
 	background-color: #a9ba9d;
 	padding: 1rem;
 
-	> h1 {
+	> a {
+		text-decoration: none;
+	}
+
+	> a > h1 {
 		margin: 0;
 		color: white;
 	}
@@ -50,10 +54,9 @@ main {
 }
 
 main > header,
-article.node > header {
+main > article > header {
 	background-color: #333;
 	padding: 0.8rem 1rem;
-	text-align: right;
 
 	> h1 {
 		margin: 0;
@@ -61,6 +64,15 @@ article.node > header {
 		font-weight: normal;
 		font-size: 1.1rem;
 		text-transform: uppercase;
+	}
+}
+
+main.nodes > header.node,
+main.node > header.node,
+article.node > header.node {
+	text-align: right;
+
+	h1 {
 		float: left;
 	}
 }
