Fix node property styling

--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -126,7 +126,7 @@ main.node.new > header.node > nav.crud {
 	}
 }
 
-article.node > dl.node-properties {
+dl.node-properties {
 	> dt {
 		text-transform: uppercase;
 		font-size: 0.8rem;
