--- a/themes/default/resources/css/default.css
+++ b/themes/default/resources/css/default.css
@@ -81,14 +81,16 @@ header.node > nav.crud > ul > li {
   padding: 0;
 }
 header.node > nav.crud > ul > li > a {
+  text-decoration: none;
   text-transform: uppercase;
   color: white;
   font-size: 0.7rem;
   font-weight: bold;
   line-height: 1.6rem;
-  min-width: 4rem;
+  min-width: 5rem;
   text-align: center;
   display: inline-block;
+  background-color: #646464;
   -webkit-border-radius: 0.2em;
   -moz-border-radius: 0.2em;
   -ms-border-radius: 0.2em;
@@ -104,13 +106,19 @@ header.node > nav.crud > ul > li > a.new {
 header.node > nav.crud > ul > li > a.edit {
   background-color: #d9534f;
 }
-header.node > nav.crud > ul > li > a.new,
-header.node > nav.crud > ul > li > a.edit {
-  text-decoration: none;
+header.node > nav.crud > ul > li.view {
+  display: none;
 }
 
-main.node.new > header.node > nav.crud > ul > li.new {
+main.node.new header.node > nav.crud > ul > li.new {
   display: none;
+}
+
+main.node.edit header.node > nav.crud > ul > li.edit {
+  display: none;
+}
+main.node.edit header.node > nav.crud > ul > li.view {
+  display: inherit;
 }
 
 dl.node-properties > dt {
