Hide collection link on collection pages

--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -122,6 +122,12 @@ header.object > nav.crud {
 	}
 }
 
+main.collection header.object > nav.crud {
+	> ul > li.collection {
+		display: none;
+	}
+}
+
 main.object.new header.object > nav.crud {
 	> ul > li.new {
 		display: none;
