--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -98,7 +98,8 @@ header.object > nav.crud {
 		font-size: 0.7rem;
 		font-weight: bold;
 		line-height: 1.6rem;
-		min-width: 5rem;
+		min-width: 5em;
+		padding: 0 1em;
 		text-align: center;
 		display: inline-block;
 		background-color: #646464;
