--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -1,6 +1,7 @@
 @import 'compass/css3';
 
 @import 'variables';
+@import 'mixins';
 
 html {
 	min-height: 100%;
@@ -14,15 +15,12 @@ body {
 
 a {
 	color: $button-blue;
+	text-decoration: none;
 }
 
 body > header {
 	background-color: #a9ba9d;
 	padding: 1rem;
-
-	> a {
-		text-decoration: none;
-	}
 
 	> a > h1 {
 		margin: 0;
@@ -54,8 +52,11 @@ main {
 	margin-bottom: 6rem;
 
 	> .body,
-	> article > .body {
-		margin: 1em;
+	> article > .body,
+	> footer,
+	> article > footer {
+		margin: 1em 0;
+		padding: 0 1em;
 	}
 }
 
@@ -92,18 +93,8 @@ header.object > nav.crud {
 	}
 
 	> ul > li > a {
-		text-decoration: none;
-		text-transform: uppercase;
-		color: white;
-		font-size: 0.7rem;
-		font-weight: bold;
-		line-height: 1.6rem;
-		min-width: 5em;
-		padding: 0 1em;
-		text-align: center;
-		display: inline-block;
 		background-color: #646464;
-		@include border-radius(0.2em);
+		@include button();
 	}
 
 	> ul > li + li {
@@ -293,4 +284,47 @@ select {
 
 p.error {
 	color: $button-red;
+}
+
+article.node {
+	> .body,
+	> footer.node {
+		@include box-sizing(border-box);
+	}
+
+	> .body {
+		float: left;
+		width: 70%;
+	}
+
+	> footer.node {
+		float: right;
+		width: 30%;
+	}
+}
+
+article.node > footer.node > section.edges {
+	> h1 {
+		text-transform: uppercase;
+		font-size: 0.8rem;
+		font-weight: bold;
+	}
+
+	> h2 {
+		font-size: 0.9rem;
+	}
+
+	> nav.edges > ul {
+		padding: 0;
+		list-style: none;
+
+		> li.new > a.new {
+			@include button();
+			background-color: $button-blue;
+		}
+
+		> li {
+			margin: 1em 0;
+		}
+	}
 }
